// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayStaff should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DisplayStaff
    admin={true}
    deleteFromSchedule={[Function]}
    event={
        Object {
            "staff": Array [
              Object {
                "role": "Bar Manager",
                "staff_events_id": 34,
              },
            ],
          }
    }
    handleEditClick={[Function]}
    staffRole="Bar Manager"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h4>
          Bar Manager
</h4>,
        Array [
          <li>
            <div
                        className="edit-container"
            >
                        <button
                                    className="delete"
                                    onClick={[Function]}
                        />
                        <button
                                    className="edit"
                                    onClick={[Function]}
                        />
            </div>
</li>,
        ],
      ],
      "className": "bar-manager",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Bar Manager",
        },
        "ref": null,
        "rendered": "Bar Manager",
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "34Bar Manager",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            <div
              className="edit-container"
>
              <button
                            className="delete"
                            onClick={[Function]}
              />
              <button
                            className="edit"
                            onClick={[Function]}
              />
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="delete"
                  onClick={[Function]}
/>,
                <button
                  className="edit"
                  onClick={[Function]}
/>,
              ],
              "className": "edit-container",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "delete",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "edit",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h4>
            Bar Manager
</h4>,
          Array [
            <li>
              <div
                            className="edit-container"
              >
                            <button
                                          className="delete"
                                          onClick={[Function]}
                            />
                            <button
                                          className="edit"
                                          onClick={[Function]}
                            />
              </div>
</li>,
          ],
        ],
        "className": "bar-manager",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Bar Manager",
          },
          "ref": null,
          "rendered": "Bar Manager",
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "34Bar Manager",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              <div
                className="edit-container"
>
                <button
                                className="delete"
                                onClick={[Function]}
                />
                <button
                                className="edit"
                                onClick={[Function]}
                />
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="delete"
                    onClick={[Function]}
/>,
                  <button
                    className="edit"
                    onClick={[Function]}
/>,
                ],
                "className": "edit-container",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "delete",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "edit",
                    "onClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`DisplayStaff should match the snapshot when the staffRole is Bartender 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DisplayStaff
    event={
        Object {
            "staff": Array [
              Object {
                "role": "Bar Manager",
                "staff_events_id": 34,
              },
            ],
          }
    }
    staffRole="Bartender"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h4>
          Bartenders
</h4>,
        Array [],
      ],
      "className": "bartenders",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Bartenders",
        },
        "ref": null,
        "rendered": "Bartenders",
        "type": "h4",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h4>
            Bartenders
</h4>,
          Array [],
        ],
        "className": "bartenders",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Bartenders",
          },
          "ref": null,
          "rendered": "Bartenders",
          "type": "h4",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
